[gd_scene format=3 uid="uid://b7mv6b1soj8n0"]

[ext_resource type="Script" path="res://scripts/ui/keybindings.gd" id="1_keybindings"]

[node name="KeybindingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_keybindings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 0.9)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -320.0
offset_right = 420.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "KEYBINDINGS"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="HintLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select a binding to reassign"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="Scroll" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BindingsList" type="VBoxContainer" parent="Panel/VBoxContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ButtonRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

theme_override_constants/separation = 16

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(180, 45)
layout_mode = 2
text = "RESET DEFAULTS"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
text = "BACK"
